--- a/the_project/webserver/src/static/index.html
+++ b/the_project/webserver/src/static/index.html
@@ -5,6 +5,7 @@
     <title>Kubernetes Course</title>
 </head>
 <body>
+    <img src="/image" alt="Random image"/>
     <h1>Welcome to My Web Page</h1>
     <p>An apple a day keeps the doctor away.</p>
 </body>
