--- a/the_project/webserver/src/static/index.html
+++ b/the_project/webserver/src/static/index.html
@@ -3,10 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Kubernetes Course</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
+
 </head>
 <body>
-    <img src="/image" alt="Random image"/>
-    <h1>Welcome to My Web Page</h1>
-    <p>An apple a day keeps the doctor away.</p>
+    <main class="container">
+        <img src="/image" alt="Random image" />
+        <h1>Welcome to My Web Page</h1>
+        <p>An apple a day keeps the doctor away.</p>
+
+        <form action="">
+            <input type="text" maxlength="140">
+            <button>
+                CREATE TODO
+            </button>
+        </form>
+
+        <ul>
+            <li>Buy apricots</li>
+            <li>Buy bananas</li>
+            <li>Figure out if bananas are berries or fruits</li>
+        </ul>
+        
+    </main>
+    
 </body>
 </html>
